# tg-music-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
completions/: tg-music.bash  tg-music.fish  tg-music.zsh
tests/: conftest.py  test_pure.py
tg_music/: cache.py  cli.py  config.py  cover.py  db.py  local.py  lyrics.py  models.py  player.py  render_base.py  render_classic.py  render_cover.py  render_help.py  render_panels.py  render_split.py  shared.py  telegram_client.py  themes.py  tui.py  tui_player.py  tui_render.py  welcome.py
