[project]
name = "tg-music-cli"
version = "0.1.0"
description = "Terminal music player for Telegram channel audio."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "mutagen>=1.48.1",
  "telethon>=1.36.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
tg-music = "tg_music.cli:main"
tgmusic-cli = "tg_music.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tg_music"]
